--- a/ansible/group_vars/hypervisor.yaml
+++ b/ansible/group_vars/hypervisor.yaml
@@ -2,7 +2,7 @@
 
 rpms: ['lorax']
 
-rhel_iso: '/opt/isos/rhel-8.5-x86_64-dvd.iso'
+rhel_iso: '/opt/isos/rhel-baseos-9.0-x86_64-dvd.iso'
 
 demo_dir: 'demo'
 tmp_dir: '/tmp/rheledge'
