--- a/ansible/roles/server/tasks/main.yaml
+++ b/ansible/roles/server/tasks/main.yaml
@@ -4,6 +4,6 @@
 - include_tasks: 02-services.yaml
 - include_tasks: 03-users.yaml
 - include_tasks: 04-demo.yaml
-- include_tasks: 05-registry.yaml
-- include_tasks: 06-containers.yaml
+#- include_tasks: 05-registry.yaml
+#- include_tasks: 06-containers.yaml
 - include_tasks: 99-firewalld.yaml
